# data-engineering-project

./: .gitignore
projects/pokeapi-medallion-pipeline/: extract_pokemons.py  main.py  pyproject.toml  utils.py
projects/pokeapi-medallion-pipeline/src/bronze/: extract_bronze.py  insert_bronze_s3.py  main.py
projects/pokeapi-medallion-pipeline/src/utils/: utils.py
